logs/robotframework-httplibrary.log
Listing '.'...
Listing './bin'...
Listing './include'...
Listing './lib'...
Listing './lib/python3.5'...
Listing './lib/python3.5/site-packages'...
Listing './lib/python3.5/site-packages/HttpLibrary'...
Compiling './lib/python3.5/site-packages/HttpLibrary/__init__.py'...
***   File "./lib/python3.5/site-packages/HttpLibrary/__init__.py", line 16
    except ValueError, e:
                     ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/WebOb-1.7.4.dist-info'...
Listing './lib/python3.5/site-packages/WebTest-2.0.29.dist-info'...
Listing './lib/python3.5/site-packages/beautifulsoup4-4.6.0.dist-info'...
Listing './lib/python3.5/site-packages/bs4'...
Listing './lib/python3.5/site-packages/bs4/builder'...
Listing './lib/python3.5/site-packages/bs4/tests'...
Listing './lib/python3.5/site-packages/jsonpatch-1.21.dist-info'...
Listing './lib/python3.5/site-packages/jsonpointer-1.14.dist-info'...
Listing './lib/python3.5/site-packages/pip'...
Listing './lib/python3.5/site-packages/pip/_vendor'...
Listing './lib/python3.5/site-packages/pip/commands'...
Listing './lib/python3.5/site-packages/pip/compat'...
Listing './lib/python3.5/site-packages/pip/models'...
Listing './lib/python3.5/site-packages/pip/operations'...
Listing './lib/python3.5/site-packages/pip/req'...
Listing './lib/python3.5/site-packages/pip/utils'...
Listing './lib/python3.5/site-packages/pip/vcs'...
Listing './lib/python3.5/site-packages/pip-9.0.1.dist-info'...
Listing './lib/python3.5/site-packages/pkg_resources'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor'...
Listing './lib/python3.5/site-packages/pkg_resources/_vendor/packaging'...
Listing './lib/python3.5/site-packages/pkg_resources/extern'...
Listing './lib/python3.5/site-packages/pkg_resources-0.0.0.dist-info'...
Listing './lib/python3.5/site-packages/robot'...
Listing './lib/python3.5/site-packages/robot/api'...
Listing './lib/python3.5/site-packages/robot/conf'...
Listing './lib/python3.5/site-packages/robot/htmldata'...
Listing './lib/python3.5/site-packages/robot/htmldata/common'...
Listing './lib/python3.5/site-packages/robot/htmldata/lib'...
Listing './lib/python3.5/site-packages/robot/htmldata/libdoc'...
Listing './lib/python3.5/site-packages/robot/htmldata/rebot'...
Listing './lib/python3.5/site-packages/robot/htmldata/testdoc'...
Listing './lib/python3.5/site-packages/robot/libdocpkg'...
Listing './lib/python3.5/site-packages/robot/libraries'...
Listing './lib/python3.5/site-packages/robot/model'...
Listing './lib/python3.5/site-packages/robot/output'...
Listing './lib/python3.5/site-packages/robot/output/console'...
Listing './lib/python3.5/site-packages/robot/parsing'...
Listing './lib/python3.5/site-packages/robot/reporting'...
Listing './lib/python3.5/site-packages/robot/result'...
Listing './lib/python3.5/site-packages/robot/running'...
Listing './lib/python3.5/site-packages/robot/running/arguments'...
Listing './lib/python3.5/site-packages/robot/running/timeouts'...
Compiling './lib/python3.5/site-packages/robot/running/timeouts/ironpython.py'...
***   File "./lib/python3.5/site-packages/robot/running/timeouts/ironpython.py", line 56
    raise self._error[0], self._error[1], self._error[2]
                        ^
SyntaxError: invalid syntax

Compiling './lib/python3.5/site-packages/robot/running/timeouts/jython.py'...
***   File "./lib/python3.5/site-packages/robot/running/timeouts/jython.py", line 55
    raise self._error[0], self._error[1], self._error[2]
                        ^
SyntaxError: invalid syntax

Listing './lib/python3.5/site-packages/robot/utils'...
Listing './lib/python3.5/site-packages/robot/variables'...
Listing './lib/python3.5/site-packages/robot/writer'...
Listing './lib/python3.5/site-packages/robotframework-3.0.2.egg-info'...
Listing './lib/python3.5/site-packages/robotframework_httplibrary-0.4.2.egg-info'...
Listing './lib/python3.5/site-packages/setuptools'...
Listing './lib/python3.5/site-packages/setuptools/command'...
Listing './lib/python3.5/site-packages/setuptools/extern'...
Listing './lib/python3.5/site-packages/setuptools-32.3.1.dist-info'...
Listing './lib/python3.5/site-packages/six-1.11.0.dist-info'...
Listing './lib/python3.5/site-packages/waitress'...
Listing './lib/python3.5/site-packages/waitress/tests'...
Listing './lib/python3.5/site-packages/waitress/tests/fixtureapps'...
Listing './lib/python3.5/site-packages/waitress-1.1.0.dist-info'...
Listing './lib/python3.5/site-packages/webob'...
Listing './lib/python3.5/site-packages/webtest'...
Listing './share'...
Listing './share/python-wheels'...
